[package]
name = "uartdemo"
version = "0.1.0"
authors = ["kolen <incredible.angst@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
nb = "0.1.2"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.11"
panic-halt = "0.2.0"
stm32f1xx-hal = { version = "0.5.3", features = ["rt", "stm32f103", "medium"] }
cortex-m-semihosting = "0.3.5"
